--- a/Guids/hard/hard.html
+++ b/Guids/hard/hard.html
@@ -4,45 +4,80 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <link rel="stylesheet" href="main.css">
+    <title>Avansert</title>
 </head>
 <body>
+  <div class="arrow-keys">
+    <span class="arrow-left">←</span>
+    Press arrows
+    <span class="arrow-right">→</span>
+  </div>
     <div class="slider">
         <ul class="pages">
             <li class="page page1">
-                <h1>1/6 Finn studio </h1>
-                <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolorem pariatur odit sint explicabo sunt eum natus facere dolor magni illo, libero consectetur, rerum illum? A quibusdam delectus similique, beatae! <br /> <b>Use Arrow Keys to navigate. <center>Left/Right Or Up/Down</center></b>			
-                    </p>
+                <h1>1/6 Flexbox-layout </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>File</p>
+                        <a href="/Files/Flexbox-layout.html" download>
+                            <img src="images/Folder.png" id="center">
+                        </a>    
+                    </div>
                 </div>
             </li>
             <li class="page page2">
-                <h1>2/6 Verktøy </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque fugiat odio quia placeat ut voluptatem dolorem tenetur iste, sit ex? Voluptates beatae, quam asperiores quia quasi, voluptas minima fugit incidunt?</p>
+                <h1>2/6 Introduksjon til JavaScript </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>File</p>
+                        <a href="/Files/Javascript-intro.html" download>
+                            <img src="images/Folder.png" id="center">
+                        </a>    
+                    </div>
                 </div>
             </li>
             <li class="page page3">
-                <h1>3/6 HTML-elementer og struktur </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>3/6 Variabler, datatyper og tildeling </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>File</p>
+                        <a href="/Files/Variabler-datetyper-tildeling.html" download>
+                            <img src="images/Folder.png" id="center">
+                        </a>    
+                    </div>
                 </div>
             </li>
             <li class="page page4">
-                <h1>4/6 Lenker </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>4/6 Betingelser og beslutningsstrukturer </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>File</p>
+                        <a href="/Files/Variabler-datetyper-tildeling.html" download>
+                            <img src="images/Folder.png" id="center">
+                        </a>    
+                    </div>
                 </div>
             </li>
             <li class="page page5">
-                <h1>5/6 Skjemaer og input-elementer </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>5/6 Sløyfer </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>File</p>
+                        <a href="/Files/Sløyfer.html" download>
+                            <img src="images/Folder.png" id="center">
+                        </a>    
+                    </div>
                 </div>
             </li>
             <li class="page page6">
-                <h1>6/6 Semantisk HTML </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>6/6 Funksjoner og metoder </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>File</p>
+                        <a href="/Files/Funksjoner-og-metoder.html" download>
+                            <img src="images/Folder.png" id="center">
+                        </a>    
+                    </div>
                 </div>
             </li>
         </ul>
