--- a/Guids/medium/medium.html
+++ b/Guids/medium/medium.html
@@ -4,39 +4,136 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=0.7">
     <link rel="stylesheet" href="main.css">
+    <title>Mellomnivå</title>
 </head>
 <body>
+  <div class="arrow-keys">
+    <span class="arrow-left">←</span>
+    Press arrows
+    <span class="arrow-right">→</span>
+  </div>
     <div class="slider">
         <ul class="pages">
             <li class="page page1">
-                <h1>1/5 Finn studio </h1>
-                <div class="content">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos dolorem pariatur odit sint explicabo sunt eum natus facere dolor magni illo, libero consectetur, rerum illum? A quibusdam delectus similique, beatae! <br /> <b>Use Arrow Keys to navigate. <center>Left/Right Or Up/Down</center></b>			
-                    </p>
-                </div>
-            </li>
-            <li class="page page2">
-                <h1>2/5 Verktøy </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eaque fugiat odio quia placeat ut voluptatem dolorem tenetur iste, sit ex? Voluptates beatae, quam asperiores quia quasi, voluptas minima fugit incidunt?</p>
+                <h1>1/4 Marginaler og padding </h1>
+                <div class="content-container">
+                    <div class="content1 text" id="medium">
+                        <p>HTML</p>
+                        <ol class="console-box">
+                          <li>
+                            <span class="monokai-white">&lt;<span class="monokai-red">!DOCTYPE html</span>&gt;
+                          </li>
+                          <li>
+                            <span class="monokai-white">&lt;<span class="monokai-red">html</span>&gt;
+                          </li>
+                          <li>
+                            <span class="monokai-white">&lt;<span class="monokai-red">head</span>&gt;
+                          </li>
+                          <li>
+                            <ul>
+                              <li>
+                                <span class="monokai-white">&lt;<span class="monokai-orange">style</span>&gt;
+                              </li>
+                              <li>
+                                <ul>
+                                  <li>
+                                    <span class="monokai-white"><span class="monokai-teal">div </span>{</span>
+                                  </li>
+                                </ul>
+                              </li>
+                              <li>
+                                <ul>
+                                  <li>
+                                    <ul>
+                                      <li>
+                                        <span class="monokai-white">background-color:<span class="monokai-red"> lightgrey;</span>
+                                      </li>
+                                      <li>
+                                        <span class="monokai-white">width:<span class="monokai-red"> 300px;</span>
+                                      </li>
+                                      <li>
+                                        <span class="monokai-white">border:<span class="monokai-red"> 15px solid black;</span>
+                                      </li>
+                                      <li>
+                                        <span class="monokai-white">padding:<span class="monokai-red"> 50px;</span>
+                                      </li>
+                                      <li>
+                                        <span class="monokai-white">margin:<span class="monokai-red"> 20px;</span>
+                                      </li>
+                                    </ul>
+                                  </li>
+                                </ul>
+                              </li>
+                              <li>
+                                <ul>
+                                  <li>
+                                    <span class="monokai-white">}</span>
+                                  </li>
+                                </ul>
+                              </li>
+                              <li>
+                                <span class="monokai-white">&lt;/<span class="monokai-orange">style</span>&gt;</span>
+                              </li>
+                            </ul>
+                          </li>
+                          <li>
+                            <span class="monokai-white">&lt;/<span class="monokai-red">head</span>&gt;</span>
+                          </li>
+                          <li>
+                            <span class="monokai-white">&lt;<span class="monokai-red">body</span>&gt;</span>
+                          </li>
+                          <li>
+                            <ul>
+                              <li>
+                                <span class="monokai-white">&lt;<span class="monokai-teal">div</span>&gt;Denne teksten er innholdet i boksen. Vi har lagt til en 50px polstring, 20px marg og en 15px grønn ramme.</span><span class="monokai-white">&lt;/<span class="monokai-teal">div</span>&gt;</span>
+                              </li>
+                            </ul>
+                          </li>
+                          <li>
+                            <span class="monokai-white">&lt;<span class="monokai-red">body</span>&gt;</span>
+                          </li>
+                          <li>
+                            <span class="monokai-white">&lt;/<span class="monokai-red">html</span>&gt;</span>
+                          </li>
+                        </ol>
+                    </div>
+                    <div class="content3 text">
+                        <p>Resultat</p>
+                        <img src="images/box.png" id="center">
+                    </div>
                 </div>
             </li>
             <li class="page page3">
-                <h1>3/5 HTML-elementer og struktur </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>2/4 Styling av lister og tabeller </h1>
+                <div class="content-container">
+                  <div class="content1 text" id="medium">
+                    <p>File</p>
+                    <a href="/Files/Lister-og-tabeller.html" download>
+                        <img src="images/Folder.png" id="center">
+                    </a>    
+                  </div>
                 </div>
             </li>
             <li class="page page4">
-                <h1>4/5 Lenker </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>3/4 Positionering </h1>
+                <div class="content-container">
+                  <div class="content1 text" id="medium">
+                    <p>File</p>
+                    <a href="/Files/Positionering.html" download>
+                        <img src="images/Folder.png" id="center">
+                    </a>    
+                  </div>
                 </div>
             </li>
             <li class="page page5">
-                <h1>5/5 Skjemaer og input-elementer </h1>
-                <div class="content">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos nostrum incidunt nemo, eaque qui voluptatem, corrupti harum voluptates dignissimos, inventore neque nulla eveniet veritatis officiis architecto eius est dolorum error!</p>
+                <h1>4/4 Grid-layout </h1>
+                <div class="content-container">
+                  <div class="content1 text" id="medium">
+                    <p>File</p>
+                    <a href="/Files/Grid.html" download>
+                        <img src="images/Folder.png" id="center">
+                    </a>    
+                  </div>
                 </div>
             </li>
         </ul>
